# seagort-lite

./: .editorconfig  .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  config.yaml  pubspec.yaml
.github/workflows/: publish.yml  test_workflows.yml
bridge/: libseagort.h
config/: cpp.yaml
example/: example.dart  main.dart
lib/: seagort.dart
lib/src/: js.dart  source.dart
lib/src/lib/: compile.dart
lib/src/libraries/: native_add_library.dart  native_go_library.dart
lib/src/native/: library.dart
utils/: CMakeLists.txt
utils/c/: basic.c  basic.h
utils/engine/: Cargo.toml  build.sh  go.mod  main.go
utils/engine/src/: main.rs
utils/engine/src/lib/utils/: c_interface.rs
utils/engine/tests/: test.go
utils/go/: main.go
utils/rs-engine/: Cargo.toml  README.md  build.sh
