[package]
name = "seagort-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "seagort"
crate-type = ["cdylib"]

[dependencies]
async-ffi = "0.5.0"
deno_core = "0.266.0"
tokio = { version = "1.36.0", features = ["full"] }
